<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.LoginActivity"
    android:background="@color/md_theme_light_background">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/hello"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="40sp"
        android:letterSpacing="-0.02"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/md_theme_light_onSurfaceVariant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvHello"
        app:layout_constraintTop_toBottomOf="@id/tvHello" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/md_theme_light_surface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_input_field"
                    android:hint="@string/username"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_input_field"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="16dp" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="12dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/md_theme_light_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Login Sebagai:"
                    android:textColor="@color/md_theme_light_onSurface"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/rbMurid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Murid"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/rbGuru"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Guru" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_button_black"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>